Add - Missing translations, fix minor typos

--- a/core/assets/bundles/bundle_cs.properties
+++ b/core/assets/bundles/bundle_cs.properties
@@ -12,7 +12,7 @@ link.itch.io.description = Stránka na itch.io s odkazy na stažení hry
 link.google-play.description = Obchod Google Play
 link.f-droid.description = Katalog F-Droid
 link.wiki.description = Oficiální Wiki Mindustry
-link.suggestions.description = Suggest new features
+link.suggestions.description = Navrhni něco nového do hry!
 linkfail = Nepodařilo se otevřít odkaz!\nAdresa URL byla zkopírována do schránky.
 screenshot = Snímek obrazovky uložen {0}
 screenshot.invalid = Mapa je moc velká, nemusí být dost paměti pro získání snímku obrazovky.
@@ -20,7 +20,7 @@ gameover = Konec hry
 gameover.pvp = Vyhrál tým [accent]{0}[]!
 highscore = [accent]Nový rekord!
 copied = Zkopírováno.
-indev.popup = [accent]v6[] is currently in [accent]alpha[].\n[lightgray]This means:[]\n[scarlet]- The campaign is completely unfinished[]\n- Content is missing\n - Most [scarlet]Unit AI[] does not work properly\n- Many units are unfinished\n- Everything you see is subject to change or removal.\n\nReport bugs or crashes on [accent]Github[].
+indev.popup = Verze [accent]v6[] hry je aktuálně v režimu [accent]alpha[].\n[lightgray]To znamená:[]\n[scarlet]- Kampaň je zcela nedokončena[]\n- Obsah může chybět\n - Většina [scarlet]umělé inteligence jednotek[] nefunguje správně\n- Hodně jednotek je nedokončeno\n- Vše, co vidíš, se může změnit nebo i být odstraněno.\n\nChyby a pády hry prosím hlašte na [accent]Githubu[].
 indev.notready = Tato část hry ještě není připravena
 
 load.sound = Zvuky
@@ -246,7 +246,7 @@ selectslot = Vyber pozici pro uložení hry.
 slot = [accent]Pozice {0}[]
 editmessage = Upravit zprávu
 save.corrupted = Uložení je poškozené nebo neplatné.
-empty = <Prázný>
+empty = <Prázdný>
 on = On
 off = Off
 save.autosave = Automatické uložení: {0}
@@ -374,7 +374,7 @@ editor.savemap = Uložit mapu
 editor.saved = Uloženo!
 editor.save.noname = Tvoje mapa nemá jméno! Jméno nastavíš v položce nabídky "Informace o mapě".
 editor.save.overwrite = Tvoje mapa přepisuje vestavěnou mapu! Nastav jí radši jiné jméno v položce nabídky "Informace o mapě".
-editor.import.exists = [scarlet]Není možno importovat:[] existuje vestavěná mapa se stejným jménem '{0}'!
+editor.import.exists = [scarlet]Není možno importovat:[] Existuje vestavěná mapa se stejným jménem '{0}'!
 editor.import = Import...
 editor.importmap = Importovat mapu
 editor.importmap.description = Importovat již existující mapu
@@ -486,7 +486,7 @@ loadout = Načtení
 resources = Zdroje 
 bannedblocks = Zakázané bloky
 addall = Přidat vše
-launch.destination = Destination: {0}
+launch.destination = Cíl: {0}
 configure.invalid = Hodnota musí být číslo mezi 0 a {0}.
 zone.unlocked = [lightgray]Mapa {0} byla odemknuta.[]
 zone.requirement.complete = Bylo dosaženo vlny {0},\nčímž byla splněna podmínka pro mapu {1}.
@@ -505,7 +505,7 @@ error.mismatch = Chyba při komunikaci se serverem:\nVerze klienta a serveru se 
 error.alreadyconnected = Připojeni k serveru.
 error.mapnotfound = Soubor s mapou nebyl nalezen!
 error.io = Vstupně/výstupní (I/O) chyba sítě.
-error.any = Ueznámá chyba sítě.
+error.any = Neznámá chyba sítě.
 error.bloom = Chyba inicializace filtru Bloom.\nTvé zařízení ho nejspíš nepodporuje.
 
 weather.rain.name = Déšť
@@ -519,7 +519,7 @@ sectors.production = Výroba:
 sectors.stored = Uskladněno:
 sectors.resume = Pokračovat
 sectors.launch = Vyslat
-sectors.select = Select
+sectors.select = Vybrat
 sectors.nonelaunch = [lightgray]none (sun)
 
 sector.groundZero.name = Základní tábor
@@ -558,8 +558,8 @@ settings.graphics = Grafika
 settings.cleardata = Vymazat data hry...
 settings.clear.confirm = Jsi si jistý, že chceš vymazat Tvá data ve hře?\nTento krok je nevratný!
 settings.clearall.confirm = [scarlet]Varování![]\nToto vyresetuje všechna Tvá data ve hře, včetně uložení hry, map, odemknutého postupu v kampani a nastavení ovládání.\nJakmile stiskneš "OK", všechna data se vymažou a hra se automaticky ukončí.
-settings.clearsaves.confirm = Are you sure you want to clear all your saves?
-settings.clearsaves = Clear Saves
+settings.clearsaves.confirm = Opravdu chceš smazat všechny své uložené hry?
+settings.clearsaves = Vymazat uložené hry
 paused = [accent]< Pozastaveno >[]
 clear = Vyčistit
 banned = [scarlet]Zakázán[]
@@ -756,7 +756,7 @@ keybind.press = Stiskni klávesu...
 keybind.press.axis = Stiskni osu ovladače nebo klávesu...
 keybind.screenshot.name = Snímek mapy
 keybind.toggle_power_lines.name = Přepnout zobrazení energetického vedení
-keybind.toggle_block_status.name = Toggle Block Statuses
+keybind.toggle_block_status.name = Přepnout stav bloků
 keybind.move_x.name = Pohyb vodorovně
 keybind.move_y.name = Pohyb svisle
 keybind.mouse_move.name = Následovat myš
@@ -927,8 +927,8 @@ unit.beta.name = Beta
 unit.gamma.name = Gama
 unit.scepter.name = Žezlo
 unit.reign.name = Panovník
-unit.vela.name = Vela
-unit.corvus.name = Corvus
+unit.vela.name = Ještěr
+unit.corvus.name = Kavka
 
 block.resupply-point.name = Zásobovací místo
 block.parallax.name = Paralaxa
@@ -982,7 +982,7 @@ block.char.name = Dřevěné uhlí
 block.dacite.name = Dacit
 block.dacite-wall.name = Stěna dacitu
 block.ice-snow.name = Zasněžený led
-block.stone-wall.name = Stone Wall
+block.stone-wall.name = Skály
 block.ice-wall.name = Ledové skály
 block.snow-wall.name = Sněhové skály
 block.dune-wall.name = Písečné duny
@@ -1302,4 +1302,4 @@ block.cyclone.description = Velká protiletecká a protipozemní střílna. Pál
 block.spectre.description = Velká střílna s kanónem s dvěma hlavněmi. Střílí velké náboje, které pronikají brněním jak pozemních, tak vzdušných nepřátelských cílů.
 block.meltdown.description = Masivní laserový kanón. Nabije se a pak pálí nepřetržitý laserový paprsek na nepřátele v okolí. Vyžaduje ke své funkci chlazení.
 block.repair-point.description = Nepřetržitě léčí nejbližší poškozenou jednotku v poli své působnosti.
-block.segment.description = Damages and destroys incoming projectiles. Laser projectiles are not targeted.
+block.segment.description = Poškozuje a ničí projektily. Laserové projektily jsou ignorovány.
